--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Friends!</title>
+
+    <link href="style.css" rel="stylesheet" />
+
+
 </head>
 <body>
     <h1>HELLO FRIENDS!</h1>
+
+    <p>Here's some data! </p>
+    
+     
 </body>
 </html>
