Have a hoop API that's free, and fetch is calling the data properly. Only console.log now, append to elements and style later. Also added favicon because it bugs me.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Friends!</title>
 
-    <link href="style.css" rel="stylesheet" />
-
-
+    <link rel="icon" href="images/favicon.ico"> <!-- FreeFavicon.com -->
+    
+    <script type="text/javascript" src="/js/script.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>HELLO FRIENDS!</h1>
 
-    <p>Here's some data! </p>
-
+    <p>Here's some data! From https://www.balldontlie.io/#get-all-players </p>
+    <div id="stat1">Stuff</div>
+    <div id="stat2">Stuff</div>
+    <div id="stat3">Stuff</div>
 </body>
 </html>
